<resources>
    <string name="app_name">SendMeal</string>

    <!-- REGISTRARSE ACTIVITY -->
    <string name="lblNombre">Nombre</string>
    <string name="lblApellido">Apellido</string>
    <string name="lblMail">E-mail</string>
    <string name="lblContraseña">Contraseña</string>
    <string name="lblRepetirContraseña">Repetir contraseña</string>
    <string name="lblTipoTarjeta">Tipo de tarjeta:</string>
    <string name="lblCredito">Credito</string>
    <string name="lblDebito">Debito</string>
    <string name="lblVencimientoTarjeta">Fecha de vencimiento:</string>
    <string name="lblNroTarjeta">Numero de tarjeta</string>
    <string name="lblCCVTarjeta">CCV</string>
    <string name="lblMesVencimientoTarjeta">Mes</string>
    <string name="lblAnioVencimientoTarjeta">Año</string>
    <string name="lblCBU">CBU</string>
    <string name="lblAliasCBU">Alias CBU</string>
    <string name="lblCargaInicial">Realizar carga inicial?</string>
    <string name="lblTerminosYCondiciones">Acepto los terminos y condiciones</string>
    <string name="lblBotonRegistrar">Registrar</string>
    <string name="lblRegistrarse">Registrarse</string>
    <string name="lblBienvenido">Bienvenido</string>
    <string name="lblSendMeal">Send Meal</string>

    <!-- TOOLBAR -->
    <string name="menuRegistrarme">Registrarse</string>
    <string name="menuCrearPlato">Crear Plato</string>
    <string name="menuListarPlatos">Listar Platos</string>
    <string name="menuNuevoPedido">Nuevo Pedido</string>
    <string name="menuVolver">Volver</string>

    <!-- NUEVO PLATO ACTIVITY -->
    <string name="lblNuevoPlatoTitulo">Nuevo Plato</string>
    <string name="lblTituloPlato">Titulo</string>
    <string name="lblDescripcionPlato">Descripcion</string>
    <string name="lblPrecioPlato">Precio</string>
    <string name="lblCaloriasPlato">Calorias</string>
    <string name="lblBotonGuardarPlato">GUARDAR</string>
    <string name="lblBotonSacarFoto">Fotografiar plato</string>

    <!-- LISTAR PLATOS ACTIVITY -->
    <string name="lblPedirPlato">Pedir</string>
    <string name="lblPrecioFilaPlato">Precio: </string>

    <!-- NUEVO PEDIDO ACTIVITY -->
    <string name="lblNuevoPedidoTitulo">Nuevo Pedido</string>
    <string name="lblMailNuevoPedido">E-mail</string>
    <string name="lblCalleNuevoPedido">Calle</string>
    <string name="lblNumeroNuevoPedido">Numero</string>
    <string name="lblTipoPedidoNuevoPedido">Tipo de pedido: </string>
    <string name="lblBotonAgregarPlato">Agregar Plato</string>
    <string name="lblPrecioTotal">Total: $0.00</string>
    <string name="lblConfirmarPedido">Confirmar Pedido</string>
    <string name="lblBtnAgregarDireccion">Agregar Ubicacion de Envio</string>
    <string name="lblUbicacion">Ubicacion: </string>

    <!-- CANAL DE NOTIFICACIONES -->
    <string name="channel_name">Pedido</string>
    <string name="channel_description">Canal para confirmar nuevos pedidos</string>
    <string name="channel_firebase">Firebase</string>
    <string name="channel_firebase_description">Canal para recibir notificaciones PUSH</string>

    <!-- CLAVE API GOOGLE MAPS -->
    <string name="google_maps_key">AIzaSyBYmmuz171q43o0HI3qs4uW_YqjIgm0im0</string>
</resources>