<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTitulo"
            android:layout_marginBottom="@dimen/margenTitulo"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/dimTitulo"
            android:textColor="@color/colorNegro"
            android:text="@string/lblRegistrarse" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:ems="10"
            android:hint="@string/lblNombre"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:ems="10"
            android:hint="@string/lblApellido"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:ems="10"
            android:hint="@string/lblMail"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:ems="10"
            android:hint="@string/lblContraseña"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtRepetirContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:ems="10"
            android:hint="@string/lblRepetirContraseña"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margenLateral"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/txtTipoTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:padding="@dimen/padding"
            android:textColor="@color/colorNegro"
            android:text="@string/lblTipoTarjeta" />

        <RadioGroup
            android:id="@+id/rgTipoTarjeta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_marginBottom="@dimen/margenSuperior"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbDebito"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorCeleste"
                android:text="@string/lblDebito" />

            <RadioButton
                android:id="@+id/rbCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorCeleste"
                android:text="@string/lblCredito" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNroTarjeta"
                android:layout_width="@dimen/tamNroTarjeta"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblNroTarjeta"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtCCVTarjeta"
                android:layout_width="@dimen/editTextChico"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenIntermedio"
                android:layout_marginEnd="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblCCVTarjeta"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtVencimientoTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:padding="@dimen/padding"
            android:textColor="@color/colorNegro"
            android:text="@string/lblVencimientoTarjeta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtMesVencimientoTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblMesVencimientoTarjeta"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtAnioVencimientoTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenIntermedio"
                android:layout_marginEnd="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblAnioVencimientoTarjeta"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margenLateral"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/txtCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenLateral"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:padding="@dimen/padding"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lblCBU"/>

        <EditText
            android:id="@+id/txtAliasCBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:padding="@dimen/padding"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lblAliasCBU" />

        <Switch
            android:id="@+id/switchCargaInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:theme="@style/SwitchTheme"
            android:text="@string/lblCargaInicial" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sbCargaInicial"
                android:layout_width="@dimen/tamSB"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenLateral"
                android:layout_marginEnd="@dimen/margenIntermedio"
                android:layout_marginTop="@dimen/padding"
                android:max="1500"
                android:progressTint="@color/colorCeleste"
                android:visibility="gone"
                android:thumbTint="@color/colorCeleste" />

            <EditText
                android:id="@+id/txtCargaInicial"
                android:layout_width="@dimen/editTextChico"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:textColor="@color/colorGris"
                android:visibility="gone"
                android:textSize="@dimen/dimTextoSB"
                android:focusable="false"
                android:padding="@dimen/padding" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margenLateral"
            android:background="@android:color/darker_gray"/>

        <CheckBox
            android:id="@+id/cbTerminosYCondiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_marginTop="@dimen/margenSuperior"
            android:text="@string/lblTerminosYCondiciones"
            android:buttonTint="@color/colorCeleste"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginBottom="@dimen/margenLateral"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_gravity="center"
            android:textColor="@color/colorBlanco"
            android:text="@string/lblBotonRegistrar"
            android:enabled="false"
            android:background="@drawable/custom_button" />

    </LinearLayout>

</ScrollView>