<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.PedidoActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbNuevoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCeleste"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/colorNegro"
            app:title="@string/lblSendMeal"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/txtNuevoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTitulo"
            android:layout_marginBottom="@dimen/margenTitulo"
            android:gravity="center"
            android:text="@string/lblNuevoPedidoTitulo"
            android:textColor="@color/colorNegro"
            android:textSize="@dimen/dimTitulo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtMailNuevoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_marginBottom="@dimen/margenSuperior"
            android:ems="10"
            android:hint="@string/lblMailNuevoPedido"
            android:padding="@dimen/padding"
            android:background="@drawable/custom_edit_text"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCalleNuevoPedido"
                android:layout_width="@dimen/tamNroTarjeta"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblCalleNuevoPedido"/>

            <EditText
                android:id="@+id/txtNumeroNuevoPedido"
                android:layout_width="@dimen/editTextChico"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenIntermedio"
                android:layout_marginEnd="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:hint="@string/lblNumeroNuevoPedido"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenSuperior"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTipoPedidoNuevoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenLateral"
                android:layout_marginEnd="@dimen/margenIntermedio"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="@string/lblTipoPedidoNuevoPedido" />

            <Spinner
                android:id="@+id/spTipoPedidoNuevoPedido"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/alturaSpinner"
                android:layout_marginEnd="@dimen/margenLateral"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner"
                android:padding="@dimen/padding" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_gravity="center"
            android:textColor="@color/colorBlanco"
            android:text="@string/lblBtnAgregarDireccion"
            android:background="@drawable/custom_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenLateral"
                android:layout_marginEnd="@dimen/margenIntermedio"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="@string/lblUbicacion" />

            <EditText
                android:id="@+id/txtUbicacion"
                android:layout_width="@dimen/editTextChico"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenIntermedio"
                android:layout_marginEnd="@dimen/margenLateral"
                android:background="@drawable/custom_edit_text"
                android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                android:padding="@dimen/padding"
                android:ems="10"
                android:enabled="false" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarPlatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenSuperior"
            android:layout_marginBottom="@dimen/margenLateral"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"
            android:layout_gravity="center"
            android:textColor="@color/colorBlanco"
            android:text="@string/lblBotonAgregarPlato"
            android:background="@drawable/custom_button"/>

        <ListView
            android:id="@+id/lvNuevoPedido"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alturaListViewPedido"
            android:layout_marginBottom="@dimen/margenSuperior"
            android:layout_marginStart="@dimen/margenLateral"
            android:layout_marginEnd="@dimen/margenLateral"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margenLateral">

            <TextView
                android:id="@+id/txtPrecioTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margenLateral"
                android:textSize="18dp"
                android:text="@string/lblPrecioTotal" />

            <Button
                android:id="@+id/btnConfirmarPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margenLateral"
                android:textColor="@color/colorBlanco"
                android:background="@drawable/custom_button"
                android:text="@string/lblConfirmarPedido" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>